# python-cpp

./: .gitignore  CMakeLists.txt  IREmitter.md  Multi-file-compilation.md  add_methods.py  alloc.md  arch.md  clean.py  current.md  error.md  failed.md  fix_lookups.py  fix_pymodule.py  fix_pymodule_erase.py  fix_pymodule_hpp.py  fix_pymodule_hpp2.py  fix_pyobject.py  fix_rt_attr.py  fix_rt_attr2.py  fix_rt_attr3.py  fix_rt_attr4.py  fix_rt_attr5.py  fix_rt_attr6.py  fix_rt_attr7.py  fix_shape.py  fix_shape2.py  format-all.py  instructions.md  method_call.md  next_refactor_plan.md  next_refactor_plancur.md  out.txt  perf.md  promble.md  refactor.md  refactor_check.md  refactor_runtime_and_compiler.md  refactor_variant.md  remove_VM.md  runtime.md  (+11 more)
.github/workflows/: premerge.yml
.history/src/runtime/: PyObject_20260321201229.cpp  PyObject_20260321202418.cpp  PyObject_20260321202424.cpp  PyObject_20260321202455.cpp  PyObject_20260321202459.cpp  PyObject_20260321202510.cpp  PyObject_20260321202511.cpp  PyObject_20260321202515.cpp  PyObject_20260321202518.cpp  PyObject_20260321202524.cpp  PyString_20260321134432.cpp  PyString_20260321202920.cpp  PyType_20260321202541.cpp  PyType_20260321202612.cpp  PyType_20260321202614.cpp  PyType_20260321202615.cpp  PyType_20260321202622.cpp  PyType_20260321202642.cpp  PyType_20260321202649.cpp  PyType_20260321202857.cpp
back/: BuiltinsModule.cpp
back/src/runtime/: 1.sh
cmake/: CPM.cmake
integration/: program.cpp
refactor_log/: C-4.md  initgard.md
src/: CMakeLists.txt  forward.hpp
src/ast/: AST.cpp  AST.hpp
src/ast/optimizers/: ConstantFolding.cpp  Optimizers_tests.cpp
src/compiler/: Compiler.hpp
src/compiler/Codegen/: CodegenContext.hpp  IREmitter.cpp  IREmitter.hpp  IREmitter_test.cpp  PylangCodegen.cpp  PylangCodegen.hpp  PylangCodegen_test.cpp
src/compiler/Driver/: _SimpleDriver.cpp  _SimpleDriver.hpp  _SimpleDriver_test.cpp
src/compiler/Driver/_SimpleDriverExecEntry/: CompilerEntry.cpp
src/compiler/RuntimeLinker/: RuntimeLinker.cpp  RuntimeLinker.hpp  RuntimeLinker_test.cpp
src/compiler/Support/: Error.hpp  LLVMUtils.hpp  LLVMUtils_test.cpp  Log.hpp  ScopeTimer.hpp  StringUtils.hpp  StringUtils_test.cpp  gtest_wrapper.hpp
src/executable/bytecode/: BytecodeProgram.cpp
src/executable/bytecode/codegen/: BytecodeGenerator.cpp
src/executable/bytecode/instructions/: BuildSet.cpp  CompareOperation.cpp  JumpIfFalse.cpp  JumpIfTrue.cpp  Unary.cpp  UnpackExpand.cpp  UnpackSequence.cpp
src/executable/bytecode/serialization/: deserialize.hpp  serialize.hpp
src/executable/llvm/: LLVMGenerator.cpp  LLVMGenerator.hpp
src/executable/mlir/Dialect/Python/: MLIRGenerator.cpp  MLIRGenerator.hpp
src/interpreter/: Interpreter.cpp  Interpreter.hpp  InterpreterCore.hpp
src/memory/: Arena.hpp  ArenaManager.hpp  Arena_tests.cpp  Boehm_GCSetup.cpp  GCTracingAllocator.hpp  GCVectorUtils.hpp  GarbageCollector.cpp  GarbageCollector.hpp  GarbageCollector_tests.cpp  Heap.cpp  Heap.hpp  Heap_test.hpp  Heap_tests.cpp
src/parser/: Parser.cpp  Parser_tests.cpp
src/repl/: repl.cpp
src/runtime/: AruntimeDIR.md  AssertionError.hpp  AttributeCache.hpp  AttributeError.hpp  BaseException.cpp  BaseException.hpp  ClassBuilder.cpp  CustomPyObject.cpp  Exception.hpp  GeneratorInterface.cpp  GeneratorInterface.hpp  Import.cpp  ImportError.hpp  IndexError.hpp  KeyError.cpp  KeyError.hpp  KeyVersionTracker.hpp  LookupError.hpp  MemoryError.hpp  ModuleMangler.hpp  ModuleNotFoundError.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  NameError.cpp  NameError.hpp  NotImplemented.cpp  NotImplemented.hpp  NotImplementedError.hpp  OSError.cpp  OSError.hpp  PyArgParser.hpp  PyAsyncGenerator.cpp  PyAsyncGenerator.hpp  PyBool.cpp  PyBool.hpp  PyBoundMethod.cpp  PyBoundMethod.hpp  PyBuiltInMethod.cpp  PyBuiltInMethod.hpp  PyByteArray.cpp  (+108 more)
src/runtime/export/: CMakeLists.txt  export.hpp  rt_attr.cpp  rt_class.cpp  rt_cmp.cpp  rt_common.hpp  rt_convert.cpp  rt_create.cpp  rt_func.cpp  rt_interpreter_stubs.cpp  rt_lifecycle.cpp  rt_module.cpp  rt_op.cpp  rt_subscr.cpp
src/runtime/export/cache/: rt_attr_cache.cpp  rt_attr_cache.hpp  rt_cache.hpp  rt_method_cache.cpp
src/runtime/modules/: BuiltinsModule.cpp  CodecsModule.cpp  IOModule.cpp  ImpModule.cpp  PosixModule.cpp  SysModule.cpp
src/runtime/modules/collections/: DefaultDict.hpp  Deque.cpp  Deque.hpp
src/runtime/modules/itertools/: Chain.cpp  Chain.hpp  Count.cpp  Count.hpp  ISlice.cpp  ISlice.hpp  Permutations.cpp  Permutations.hpp  Product.cpp  Product.hpp  Repeat.cpp  Repeat.hpp  StarMap.cpp  StarMap.hpp
src/runtime/modules/sre/: Match.cpp  Match.hpp  Pattern.cpp  Pattern.hpp
src/runtime/modules/thread/: Lock.hpp  RLock.hpp
src/runtime/modules/weakref/: PyCallableProxyType.cpp  PyCallableProxyType.hpp  PyWeakProxy.cpp  PyWeakProxy.hpp  PyWeakRef.cpp  PyWeakRef.hpp  WeakRefRegistry.hpp  module.cpp
src/runtime/shape/: Shape.cpp  Shape.hpp
src/runtime/taggered_pointer/: RtValue.cpp  RtValue.hpp  RtValue_VMops.cpp
src/runtime/tests/: ArenaObject_tests.cpp  CompileIsolation_tests.cpp  Import_tests.cpp  InterpreterCore_tests.cpp  KeyVersionTracker_tests.cpp  ModuleInit_tests.cpp  ModuleMangler_tests.cpp  ModuleRegistry_tests.cpp  ProviderChain_tests.cpp  PyModule_add_symbol_tests.cpp  PyModule_version_tests.cpp  RuntimeAPI_tests.cpp  RuntimeContext_tests.cpp  RuntimeContext_truthy_tests.cpp  Truthy_fallback_tests.cpp  Value_truthy_tests.cpp
src/runtime/types/: api.hpp  builtin.cpp  builtin.hpp
src/runtime/warnings/: DeprecationWarning.cpp  DeprecationWarning.hpp  ImportWarning.cpp  ImportWarning.hpp  PendingDeprecationWarning.cpp  PendingDeprecationWarning.hpp  ResourceWarning.cpp  ResourceWarning.hpp  Warning.cpp  Warning.hpp
src/testing/: main.cpp
src/vm/: VM.cpp  VM.hpp
